tests/rosetta/out/Smalltalk/associative-array-merging.out
/workspace/mochi/tests/rosetta/out/Smalltalk/associative-array-merging.st:14: parse error, expected '|' or identifier
